--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://heli-dl.github.io/ImageGenerator/",
+  "homepage": "https://heli-dl.github.io/ImageGenerator/#",
   "name": "ai-img-generator",
   "version": "0.1.0",
   "private": true,
